# Ordering

./: Cargo.toml  log.txt  main.rs  robottcp.rs
src/: main.rs  robot.rs  server.rs  servertcp.rs
src/graphic/: mod.rs
src/robot/: mod.rs
src/server/: internal.rs  mod.rs
