[package]
name = "Ordering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = "1.0.193"
serde_derive = "1.0.193"
egui = "0.24.1"
eframe = "0.24.1"
egui_extras = "0.24.2"
env_logger = "0.10.1"
